@@ -95,8 +95,13 @@ void SessionHandle::options(mysql_option opt, unsigned int i)
 
 void SessionHandle::connect(const char* host, const char* user, const char* password, const char* db, unsigned int port)
 {
+#ifdef HAVE_MYSQL_REAL_CONNECT
 	if (!mysql_real_connect(_pHandle, host, user, password, db, port, 0, 0))
 		throw ConnectionFailedException(mysql_error(_pHandle));
+#else
+	if (!mysql_connect(_pHandle, host, user, password))
+		throw ConnectionFailedException(mysql_error(_pHandle))
+#endif
 }
 
 
