@@ -100,7 +100,7 @@ public:
 	void singleSelect();
 	void emptyDB();
 
-	void blob(int bigSize = 1024);
+	void blob(unsigned int bigSize = ~0);
 	void blobStmt();
 	void dateTime();
 	void date();
